Collaborative updating of TUI game-flow, showing Hands and GoalCards